...
          },
          currentIndex: _currentPage.index,
          items: <BottomNavigationBarItem>[
            BottomNavigationBarItem(
              icon: const Icon(
                Icons.account_circle,
                key: ValueKey<String>('Profile Tab'),
              ),
              label: appLocalizations.profile_navbar_label,
            ),
            BottomNavigationBarItem(
              icon: const Icon(
                Icons.search,
...
