...
      );
    } else {
      // No credentials
      result.add(
        Center(
          child: ElevatedButton(
            key: const ValueKey<String>('Goto: LoginPage'),
            onPressed: () async {
              Navigator.push<dynamic>(
                context,
                MaterialPageRoute<dynamic>(
                  builder: (BuildContext context) => const LoginPage(),
                ),
...
